A massive overhaul of how bundles are managed and generated
We have some pretty severe bugs in the bundle generation and window management.
This redoes that logic leveraging database tracking for simpler logic.